# test-project-apr

./: CMakeLists.txt  README.md  test.txt
.github/workflows/: ci.yml
src/: calculator.cpp  calculator.h  hello_world.cpp
tests/: test_calculator.cpp
